integration-tests/tests/errors/templates/unhandled-error.ejs
<!DOCTYPE html>
<html lang="en">
<head>
	<meta charset="UTF-8">
	<title>Errors test</title>
  <%- renderAgent() %>
  <script>
    var test = null;
    setTimeout(() => {
      test.prop1 = true;
    });
  </script>
</head>
<body>
</body>
</html>
